meta content description

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'G-F24V2Z3NCL');
     </script>
-    
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Jack Tawil's personal developer portfolio site."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
