--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       gtag('config', 'G-F24V2Z3NCL');
     </script>
 
+    <meta name="image" property="og:image" content='./src/images/mountain.jpeg'>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
