fixed meta image

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
       gtag('config', 'G-F24V2Z3NCL');
     </script>
 
-    <meta name="image" property="og:image" content='./src/images/mountain.jpeg'>
+    <meta name="image" property="og:image" content="${require(`./src/images/mountain.jpeg`)}">
+    <meta name="image" name="twitter:image" content="${require(`./src/images/mountain.jpeg`)}">
+    
     <meta charset="utf-8" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
 
