meta og tag fix

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
       gtag('config', 'G-F24V2Z3NCL');
     </script>
 
-    <meta name="image" property="og:image" content="${require(`./src/images/mountain.jpeg`)}">
-    <meta name="image" name="twitter:image" content="${require(`./src/images/mountain.jpeg`)}">
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/preview.png">
+    <meta name="image" name="twitter:image" content="%PUBLIC_URL%/preview.png">
     
     <meta charset="utf-8" />
 
